使用 lgcn 取代 wide 部分; 去检查 data 为什么生成了更多的 user id

--- a/config/dataset/ecommerce.yaml
+++ b/config/dataset/ecommerce.yaml
@@ -6,6 +6,7 @@
 # RATING_FIELD:
 'TIME_FIELD': 'timestamp'
 # seq_len: 1
+'double_tower': 'True'
 
 'filter_inter_by_user_or_item': False # if True, inter_feat will filter by user_feat and item_feat
 'load_col':
