--- a/config/model/WGCN.yaml
+++ b/config/model/WGCN.yaml
@@ -1,5 +1,5 @@
-lr_embedding_size: 20
-gcn_embedding_size: 64
+lr_embedding_size: 4
+cf_embedding_size: 64
 n_layers: 2
 reg_weight: 1e-05
 mlp_hidden_size: [32, 16, 8]
