--- a/config/model/WGCN.yaml
+++ b/config/model/WGCN.yaml
@@ -1,6 +1,7 @@
-lr_embedding_size: 4
-cf_embedding_size: 64
+fm_embedding_size: 4
+mf_embedding_size: 64
 n_layers: 2
 reg_weight: 1e-05
-mlp_hidden_size: [32, 16, 8]
-dropout_prob: 0.1
+mlp_hidden_size: [64, 64, 64]
+dropout_prob: 0.8
+eval_batch_size: 65536
